[package]
name = "expression"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["now", "arbitrary", "serde"] }
polars = { version = "0.43.1", features = ["parquet", "fmt", "dtype-date", "dtype-datetime", "dtype-time", "dtype-duration", "dtype-struct", "lazy", "streaming", "dynamic_group_by"] }

[dev-dependencies]
proptest = "1.5.0"
proptest-derive = "0.5.0"
